--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/AbdullahZeidan/MIPS.js#readme",
   "dependencies": {
     "line-reader": "^0.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.4.1"
   }
 }
